# learning-os

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/learning_os/: __init__.py  book_parser.py  cli.py  course_io.py  scaffold.py  status.py  validate.py
src/learning_os/templates/claude/: CLAUDE.md  CONTEXT.md  settings.json
src/learning_os/templates/courses/: REGISTRY.md
src/learning_os/templates/hooks/: session-end.sh  session_end.py
src/learning_os/templates/rules/: learning-mode.md  learning-mode.mdc
src/learning_os/templates/sample/sample-course/: COURSE.yaml  EXERCISES.md  LEARNING_PLAN.md
src/learning_os/templates/skills/chapter-check/: SKILL.md
src/learning_os/templates/skills/chapter-check/references/: QUIZ_PATTERNS.md
src/learning_os/templates/skills/create-course/: SKILL.md
src/learning_os/templates/skills/create-course-from-book/: SKILL.md
src/learning_os/templates/skills/create-course/assets/: COURSE_TEMPLATE.yaml
src/learning_os/templates/skills/learn/: SKILL.md
src/learning_os/templates/skills/learn/references/: COURSE_SCHEMA.md  PEDAGOGY.md
src/learning_os/templates/skills/learning-status/: SKILL.md
src/learning_os/templates/skills/onboarding/: SKILL.md
src/learning_os/templates/skills/save-progress/: SKILL.md
tests/: conftest.py  test_book_parser.py  test_cli.py  test_scaffold.py  test_validate.py
